<resources>
    <string name="app_name">PopularMov</string>

    <string name="sync_data_failed">Sync data failed.</string>
    <string name="op_refresh_list_label">Refresh</string>
    <string name="op_select_favorite_label">Favorite</string>
    <string name="op_select_by_popularity_label">Most Popular</string>
    <string name="op_select_by_vote_avg_label">Highest Rated</string>
    <string name="movie_poster_description">movie poster</string>
    <string name="movie_thumbnail_description">movie trailer thumbnail</string>
    <string name="movie_details_activity_title">Movie Details</string>
    <string name="movie_poster_resource">movie_poster</string>
    <string name="selection_sub_menu_title">Selection</string>
    <string name="movie_trailers_label">Trailers</string>
    <string name="movie_reviews_label">Reviews</string>
    <string name="play_trailer_label">Play Trailer</string>
    <string name="youtube_video_base_url">https://www.youtube.com/watch?v=</string>
    <string name="youtube_thumbnail_url">http://img.youtube.com/vi/%s/0.jpg</string>
    <string name="share_label">Share</string>
</resources>
