<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/op_refresh_list"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/op_refresh_list_label"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/file"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/selection_sub_menu_title"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/group_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/op_select_favorites"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/op_select_favorite_label" />
                <item
                    android:id="@+id/op_select_by_popularity"
                    android:icon="@drawable/ic_whatshot_black_24dp"
                    android:title="@string/op_select_by_popularity_label" />
                <item
                    android:id="@+id/op_select_by_vote_avg"
                    android:icon="@drawable/ic_poll_black_24dp"
                    android:title="@string/op_select_by_vote_avg_label" />
            </group>
        </menu>
    </item>


</menu>